--- a/frontend/src/app/shared/components/editable-field/editable-field.component.html
+++ b/frontend/src/app/shared/components/editable-field/editable-field.component.html
@@ -1,13 +1,34 @@
-<div>
-  @if(!editMode()) {
-  <p (click)="onClickText()">{{ data().value }}</p>
-  } @else {
-  <input #inputRef pInputText [value]="data().value" />
-  <button pButton (click)="onSave({ key: data().key, value: inputRef.value })">
-    <i pButtonIcon class="pi pi-check"></i>
-  </button>
-  <button pButton (click)="onClose()">
-    <i pButtonIcon class="pi pi-times"></i>
-  </button>
-  }
+<div class="flex flex-col gap-0.5 px-2 w-auto">
+  <label class="pl-1" [for]="data().key">{{ data().key }}:</label>
+  <div class="flex gap-1 w-full relative">
+    <input
+      [id]="data().key"
+      class="read-only:bg-[#18181b] rounded p-2 pl-3 pr-20 border flex-1 items-center w-full"
+      [(ngModel)]="data().value"
+      [readonly]="!editMode()"
+      (pointerdown)="onClickInput()"
+      type="text"
+    />
+    @if (editMode()) {
+    <div
+      class="absolute flex align-center gap-2 pointer-events-none right-2 top-1/2 -translate-y-1/2"
+    >
+      <button
+        class="pointer-events-auto rounded-full bg-green-600 w-7 h-7 flex justify-center items-center hover:bg-green-900 hover:cursor-pointer"
+      >
+        <svg width="12" height="12" viewBox="0 0 16 16" fill="currentColor">
+          <path d="M2 2l12 12M14 2L2 14" stroke="currentColor" stroke-width="2" />
+        </svg>
+      </button>
+      <button
+        (pointerdown)="onClose()"
+        class="pointer-events-auto rounded-full bg-red-600 w-7 h-7 flex justify-center items-center hover:bg-red-900 hover:cursor-pointer"
+      >
+        <svg width="12" height="12" viewBox="0 0 16 16" fill="currentColor">
+          <path d="M2 2l12 12M14 2L2 14" stroke="currentColor" stroke-width="2" />
+        </svg>
+      </button>
+    </div>
+    }
+  </div>
 </div>
