--- a/frontend/src/app/shared/components/editable-field/editable-field.component.html
+++ b/frontend/src/app/shared/components/editable-field/editable-field.component.html
@@ -1,19 +1,21 @@
-<div class="flex flex-col gap-0.5 px-2 w-auto">
-  <label class="pl-1" [for]="data().key">{{ data().key }}:</label>
+<div class="flex flex-col gap-0.5 w-96">
+  <label class="pl-1" [for]="data().label">{{ data().label }}:</label>
   <div class="flex gap-1 w-full relative">
     <input
-      [id]="data().key"
-      class="read-only:bg-[#18181b] rounded p-2 pl-3 pr-20 border flex-1 items-center w-full"
-      [(ngModel)]="data().value"
+      [id]="data().label"
+      class="read-only:bg-[#18181b] rounded p-2 pl-3 pr-2 border flex-1 items-center w-full h-9"
+      [(ngModel)]="inputValue"
       [readonly]="!editMode()"
       (pointerdown)="onClickInput()"
-      type="text"
+      (blur)="onBlur($event)"
+      [type]="data().type"
     />
     @if (editMode()) {
     <div
       class="absolute flex align-center gap-2 pointer-events-none right-2 top-1/2 -translate-y-1/2"
     >
       <button
+        (pointerdown)="onSave()"
         class="pointer-events-auto rounded-full bg-green-600 w-7 h-7 flex justify-center items-center hover:bg-green-900 hover:cursor-pointer"
       >
         <svg width="12" height="12" viewBox="0 0 16 16" fill="currentColor">
