--- a/frontend/src/app/shared/components/login/login.html
+++ b/frontend/src/app/shared/components/login/login.html
@@ -1,20 +1,24 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <p-iftalabel>
-    <input type="text" pInputText formControlName="username" />
-    <label for="username">Username</label>
-    @if(loginForm.controls.username.invalid){
-    <p-message severity="error" size="small" variant="simple">Provide a username</p-message>
-    }
-  </p-iftalabel>
-  <p-iftalabel>
-    <p-password formControlName="password" inputId="password" [feedback]="false" />
-    <label for="password">Password</label>
-    @if(loginForm.controls.password.invalid){
-    <p-message severity="error" size="small" variant="simple">Provide a password</p-message>
-    }
-  </p-iftalabel>
+  <div class="flex flex-col p-2">
+    <p-iftalabel>
+      <input type="text" pInputText formControlName="username" />
+      <label for="username">Username</label>
+      @if(loginForm.controls.username.invalid){
+      <p-message severity="error" size="small" variant="simple">Provide a username</p-message>
+      }
+    </p-iftalabel>
+    <div>
+      <p-iftalabel>
+        <p-password formControlName="password" inputId="password" [feedback]="false" />
+        <label for="password">Password</label>
+        @if(loginForm.controls.password.invalid){
+        <p-message severity="error" size="small" variant="simple">Provide a password</p-message>
+        }
+      </p-iftalabel>
+    </div>
 
-  <button pButton type="submit">
-    <span pButtonLabel>Log In</span>
-  </button>
+    <button class="w-md" pButton type="submit">
+      <span pButtonLabel>Log In</span>
+    </button>
+  </div>
 </form>
